--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "logideck-frontend",
+  "name": "coral-mango",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -20,9 +20,7 @@
     "font-awesome-icons": "^1.6.0",
     "formik": "^2.2.9",
     "html-to-image": "^1.9.0",
-    "html2canvas": "^1.4.1",
     "lodash": "^4.17.21",
-    "moment": "^2.29.4",
     "next": "12.1.6",
     "npm": "^8.12.1",
     "postcss": "^8.4.14",
